<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CreateAccountActivity">

    <include layout="@layout/toolbar_layout"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_account_owner_name"
            android:text="@string/label_account_owner_name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/account_owner_name"
            android:layout_below="@id/label_account_owner_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_account_owner_rut"
            android:text="@string/label_account_owner_rut"
            android:layout_below="@id/account_owner_name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/account_owner_rut"
            android:layout_below="@id/label_account_owner_rut"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_account_number"
            android:text="@string/label_account_number"
            android:layout_below="@id/account_owner_rut"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/account_number"
            android:layout_below="@id/label_account_number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_account_type"
            android:text="@string/label_account_type"
            android:layout_below="@id/account_number" />
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/account_type_spinner"
            android:layout_below="@id/label_account_type"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_banks"
            android:text="@string/label_banks"
            android:layout_below="@id/account_type_spinner"/>
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_banks"
            android:id="@+id/banks_spinner"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit_account"
            android:text="Guardar"
            android:layout_below="@id/banks_spinner"/>
    </RelativeLayout>
</LinearLayout>

